--- a/public/manage_committees.html
+++ b/public/manage_committees.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <style>
     body { background:#f8f9fa; font-family:'Segoe UI',sans-serif; }
-    .container { margin-top:30px; }
+    .container { margin-top:30px; max-width:98vw; } /* توسيع عرض الصفحة */
 
     .user-chip{display:inline-flex;align-items:center;gap:.25rem;font-size:1rem!important;padding:.375rem .75rem!important;line-height:1.5!important;border-radius:.375rem;font-weight:700!important}
     .user-chip.badge #userRole{font-weight:500!important}
 
-    table{background:#fff;border-radius:12px;overflow:hidden;font-size:14px;width:99%;margin:auto}
+    table{background:#fff;border-radius:12px;overflow:hidden;font-size:14px;width:100%;margin:auto} /* 100% بدلاً من 99% */
     th{text-align:center;vertical-align:middle;background-color:#f8f9fa;color:#000}
     td{text-align:center;vertical-align:middle}
     td.invalid{background:#fde2e1!important}
@@ -34,8 +34,7 @@
     .notes-btn{display:block;width:100%}
 
     /* شريط أعلى الأزرار */
-    .quick-actions-title{font-weight:700;text-align:center;margin-bottom:.25rem}
-    .top-actions{display:flex;gap:.5rem;flex-wrap:wrap;justify-content:center}
+    .quick-actions-title{margin-bottom:.25rem} /* صار form-label, نترك فقط الهامش */
 
     .mini-toolbar{display:flex;gap:.25rem;margin-bottom:.5rem;flex-wrap:wrap}
     .mini-toolbar button{border:1px solid #ced4da;background:#f8f9fa;padding:.25rem .5rem;border-radius:.375rem}
@@ -89,8 +88,8 @@
           <input type="text" id="committeeSearch" class="form-control" placeholder="اكتب للبحث...">
         </div>
         <div class="col-md-3 mb-2">
-          <!-- عنوان إجراءات سريعة باليمين في RTL، ومتمركز بصريا فوق الأزرار -->
-          <div class="quick-actions-title">إجراءات سريعة</div>
+          <!-- العنوان صار form-label ليتطابق مع "بحث باسم اللجنة" -->
+          <label class="form-label quick-actions-title">إجراءات سريعة</label>
           <div class="top-actions">
             <button class="btn btn-sm btn-success" id="saveAllBtn" title="حفظ جميع الصفوف المعدلة">💾 حفظ الكل</button>
             <button class="btn btn-sm btn-outline-secondary" id="reloadBtn">تحديث</button>
@@ -151,7 +150,7 @@
       <div id="selectedVisitsContainer"></div>
       <div id="completionRateContainer"></div>
 
-      <!-- شريط الإجراءات الجماعية (المكان الجديد تحت نسبة الاكتمال) -->
+      <!-- شريط الإجراءات الجماعية -->
       <div class="card p-2 mb-2">
         <div class="bulk-bar">
           <span class="selected-count">المحدد: <span id="selectedCount">0</span></span>
@@ -399,6 +398,36 @@
       }catch{ showError('❌ خطأ في الاتصال'); }
     });
 
+    /* ====== أدوات مساعدة (إظهار القيم في القوائم) ====== */
+    function normalizeName(item){
+      if(typeof item === 'string') return item;
+      return item?.name ?? item?.committee_name ?? item?.college ?? item?.auditor_name ?? '';
+    }
+    function fillSelect(sel, arr, placeholder='— اختر —'){
+      sel.innerHTML = `<option value="">${placeholder}</option>`;
+      (arr||[]).forEach(v=>{
+        const val = normalizeName(v);
+        if(!val) return;
+        const o=document.createElement('option');
+        o.value=o.textContent=val;
+        sel.appendChild(o);
+      });
+    }
+    function buildSelect(optionsArray, current, field){
+      const sel = document.createElement('select');
+      sel.className = 'form-select form-select-sm';
+      sel.dataset.field = field;
+
+      const opts = (optionsArray||[]).map(normalizeName).filter(Boolean);
+      const set = new Set(opts);
+      // أضف القيمة الحالية إن لم تكن موجودة
+      if(current && !set.has(current)) set.add(current);
+
+      sel.innerHTML = `<option value=""></option>` + Array.from(set).map(v=>`<option value="${v}"${v===current?' selected':''}>${v}</option>`).join('');
+      if(current) sel.value = current;
+      return sel;
+    }
+
     /* ====== مصادر (قوائم) ====== */
     let LIST_COLLEGES = [], LIST_AUDITORS = [], LIST_COMMITTEES = [];
     async function loadDatalists(){
@@ -414,22 +443,14 @@
 
         const collegeFilter = document.getElementById('collegeFilter');
         const auditorFilter = document.getElementById('auditorFilter');
-        (LIST_COLLEGES||[]).forEach(c=>{ const opt=document.createElement('option'); opt.value=c.name; opt.textContent=c.name; collegeFilter.appendChild(opt); });
-        (LIST_AUDITORS||[]).forEach(a=>{ const opt=document.createElement('option'); opt.value=a.name; opt.textContent=a.name; auditorFilter.appendChild(opt); });
+        (LIST_COLLEGES||[]).forEach(c=>{ const n=normalizeName(c); if(!n) return; const opt=document.createElement('option'); opt.value=n; opt.textContent=n; collegeFilter.appendChild(opt); });
+        (LIST_AUDITORS||[]).forEach(a=>{ const n=normalizeName(a); if(!n) return; const opt=document.createElement('option'); opt.value=n; opt.textContent=n; auditorFilter.appendChild(opt); });
 
         // تحميل خيارات مودال التعديل الجماعي
-        fillSelect(document.getElementById('bulkCollege'), LIST_COLLEGES.map(x=>x.name));
-        fillSelect(document.getElementById('bulkCommittee'), LIST_COMMITTEES.map(x=>x.name));
-        fillSelect(document.getElementById('bulkAuditor'), LIST_AUDITORS.map(x=>x.name));
+        fillSelect(document.getElementById('bulkCollege'),   LIST_COLLEGES, '— اختر —');
+        fillSelect(document.getElementById('bulkCommittee'), LIST_COMMITTEES, '— اختر —');
+        fillSelect(document.getElementById('bulkAuditor'),   LIST_AUDITORS, '— اختر —');
       }catch(e){ console.warn('datalist load error', e); }
-    }
-    function fillSelect(sel, arr, placeholder='— اختر —'){
-      sel.innerHTML = `<option value="">${placeholder}</option>`;
-      (arr||[]).forEach(v=>{
-        const o=document.createElement('option');
-        o.value=o.textContent=v;
-        sel.appendChild(o);
-      });
     }
 
     /* ====== Mini Editor (بديل Quill) ====== */
@@ -557,9 +578,9 @@
       const tr = document.createElement('tr');
       tr.dataset.id = c._id;
 
-      const selCollege = buildSelect(LIST_COLLEGES.map(x=>x.name), c.college, 'college');
-      const selCommittee = buildSelect(LIST_COMMITTEES.map(x=>x.name), c.committee_name, 'committee_name');
-      const selAuditor = buildSelect(LIST_AUDITORS.map(x=>x.name), c.auditor_name, 'auditor_name');
+      const selCollege   = buildSelect(LIST_COLLEGES,   c.college, 'college');
+      const selCommittee = buildSelect(LIST_COMMITTEES, c.committee_name, 'committee_name');
+      const selAuditor   = buildSelect(LIST_AUDITORS,   c.auditor_name, 'auditor_name');
 
       tr.innerHTML = `
         <td><input type="checkbox" class="rowCheck"></td>
@@ -590,26 +611,26 @@
         <td data-field="notes">
           ${
             (c.notes && stripHtml(c.notes))
-            ? `<button class="btn btn-sm btn-info open-notes">عرض الملاحظات</button>`
+            ? `<button class="btn btn-sm btn-secondary edit-row">تعديل</button>`  <!-- تبديل: هنا زر التعديل -->
             : `<span class="text-muted">لا توجد ملاحظات</span>`
           }
         </td>
 
         <td>
           <div class="action-buttons">
-            <button class="btn btn-sm btn-secondary edit-row" title="تعديل عبر نافذة"><i class="bi bi-pencil-square"></i></button>
+            <button class="btn btn-sm btn-info open-notes" title="عرض الملاحظات"><i class="bi bi-chat-dots"></i></button> <!-- تبديل: زر عرض الملاحظات -->
             <button class="btn btn-sm btn-success save-row" title="حفظ"><i class="bi bi-save"></i></button>
             <button class="btn btn-sm btn-danger delete-row" title="حذف"><i class="bi bi-trash"></i></button>
           </div>
         </td>
       `;
 
-      // ✅ اجعل القيم ظاهرة داخل القوائم المنسدلة
+      // إضافة القوائم المنسدلة
       tr.querySelector('[data-field="college"]').appendChild(selCollege);
       tr.querySelector('[data-field="committee_name"]').appendChild(selCommittee);
       tr.querySelector('[data-field="auditor_name"]').appendChild(selAuditor);
 
-      // ✅ خزّن الملاحظات الأصلية لإصلاح مشكلة "لا توجد ملاحظات"
+      // حفظ الملاحظات الأصلية
       tr.__notesHTML = c.notes || '';
 
       attachInputListeners(tr);
@@ -617,16 +638,7 @@
       return tr;
     }
 
-    function buildSelect(optionsArray, current, field){
-      const sel = document.createElement('select');
-      sel.className = 'form-select form-select-sm';
-      sel.dataset.field = field;
-      sel.innerHTML = `<option value=""></option>` + (optionsArray||[]).map(v=>`<option${v===current?' selected':''}>${v||''}</option>`).join('');
-      return sel;
-    }
-
     function attachInputListeners(tr){
-      // مستمعات للحقول العددية (نصية الآن) ضمن الأعمدة التسعة
       const numericFieldsSet = new Set(["formation_decision","work_plan","performance_indicators","meetings","consistency","coverage_books","report1","report2","report3","statistical_analysis"]);
       tr.querySelectorAll('[data-field] input').forEach(inp=>{
         const field = inp.closest('td').dataset.field;
@@ -750,7 +762,8 @@
       NOTES_EDITING_ROW.__notesHTML = newHtml;
       const notesCell = NOTES_EDITING_ROW.querySelector('[data-field="notes"]');
       if(stripHtml(newHtml)){
-        notesCell.innerHTML = '<button class="btn btn-sm btn-info open-notes">عرض الملاحظات</button>';
+        // عند وجود ملاحظات نظهر زر "تعديل" كما هو مطلوب
+        notesCell.innerHTML = '<button class="btn btn-sm btn-secondary edit-row">تعديل</button>';
       }else{
         notesCell.innerHTML = '<span class="text-muted">لا توجد ملاحظات</span>';
       }
@@ -784,16 +797,15 @@
 
     /* ====== حفظ صف / حذف صف / فتح ملاحظات / تعديل صف ====== */
     document.getElementById('committeesTable').addEventListener('click', async (e)=>{
-      const btnSave = e.target.closest('.save-row');
+      const btnSave   = e.target.closest('.save-row');
       const btnDelete = e.target.closest('.delete-row');
-      const btnNotes = e.target.closest('.open-notes');
-      const btnEdit = e.target.closest('.edit-row');
+      const btnNotes  = e.target.closest('.open-notes');
+      const btnEdit   = e.target.closest('.edit-row');
       const tr = e.target.closest('tr');
       if(!tr) return;
 
-      if(btnNotes){ openNotesModal(tr); return; }
-
-      if(btnEdit){ openEditRowModal(tr); return; }
+      if(btnNotes){ openNotesModal(tr); return; }       // زر عرض الملاحظات (في عمود الإجراءات الآن)
+      if(btnEdit){ openEditRowModal(tr); return; }      // زر التعديل (في عمود الملاحظات عند وجودها)
 
       if(btnSave){
         const id = tr.dataset.id;
@@ -832,9 +844,9 @@
     let EDITING_ROW = null;
     function openEditRowModal(tr){
       EDITING_ROW = tr;
-      fillSelect(document.getElementById('er_college'), LIST_COLLEGES.map(x=>x.name), '— الكلية —');
-      fillSelect(document.getElementById('er_committee'), LIST_COMMITTEES.map(x=>x.name), '— اسم اللجنة —');
-      fillSelect(document.getElementById('er_auditor'), LIST_AUDITORS.map(x=>x.name), '— اسم المدقق —');
+      fillSelect(document.getElementById('er_college'),   LIST_COLLEGES,   '— الكلية —');
+      fillSelect(document.getElementById('er_committee'), LIST_COMMITTEES, '— اسم اللجنة —');
+      fillSelect(document.getElementById('er_auditor'),   LIST_AUDITORS,   '— اسم المدقق —');
 
       document.getElementById('er_college').value   = tr.querySelector('[data-field="college"] select')?.value || '';
       document.getElementById('er_committee').value = tr.querySelector('[data-field="committee_name"] select')?.value || '';
@@ -853,7 +865,7 @@
       EDITING_ROW.querySelector('[data-field="audit_date"] input').value      = document.getElementById('er_date').value || '';
       EDITING_ROW.__notesHTML = erEditor().innerHTML || '';
       const notesCell = EDITING_ROW.querySelector('[data-field="notes"]');
-      if(stripHtml(EDITING_ROW.__notesHTML)) notesCell.innerHTML = '<button class="btn btn-sm btn-info open-notes">عرض الملاحظات</button>';
+      if(stripHtml(EDITING_ROW.__notesHTML)) notesCell.innerHTML = '<button class="btn btn-sm btn-secondary edit-row">تعديل</button>';
       else notesCell.innerHTML = '<span class="text-muted">لا توجد ملاحظات</span>';
       markRowChanged(EDITING_ROW);
       bootstrap.Modal.getInstance(document.getElementById('editRowModal')).hide();
