--- a/public/manage_committees.html
+++ b/public/manage_committees.html
@@ -47,7 +47,7 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <!-- Header -->
     <div class="d-flex flex-wrap justify-content-between align-items-center mb-3 gap-2">
       <h4 class="mb-0">إدارة تقييم اللجان</h4>
