--- a/public/manage_committees.html
+++ b/public/manage_committees.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <style>
     body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
-    .container{margin-top:30px;max-width:98vw}
+    /* نزّل الهيدر مثل صفحة المدققين */
+    .container{margin-top:40px;max-width:98vw}
     .user-chip{display:inline-flex;align-items:center;gap:.25rem;font-size:1rem!important;padding:.375rem .75rem!important;line-height:1.5!important;border-radius:.375rem;font-weight:700!important}
     .user-chip.badge #userRole{font-weight:500!important}
 
@@ -40,7 +41,7 @@
     .mini-editor{border:1px solid #ced4da;border-radius:.5rem;padding:.5rem;min-height:180px;background:#fff}
     .muted{color:#6c757d}
 
-    /* شريط الإجراءات (مكان شريط التحديد السابق) */
+    /* شريط الإجراءات */
     .bulk-bar{display:flex;gap:.5rem;flex-wrap:wrap;align-items:center;justify-content:flex-start}
     .bulk-title{font-weight:700;margin-inline-end:.25rem}
     .form-switch .form-check-input{cursor:pointer}
@@ -50,9 +51,9 @@
   </style>
 </head>
 <body>
-  <div class="container-fluid">
-    <!-- Header -->
-    <div class="d-flex flex-wrap justify-content-between align-items-center mb-3 gap-2">
+  <div class="container">
+    <!-- Header (أنزلناه قليلًا وأضفنا mb-4 لتباعد أكبر مثل صفحة المدققين) -->
+    <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-2">
       <h4 class="mb-0">إدارة تقييم اللجان</h4>
       <div class="d-flex align-items-center gap-2">
         <span id="userInfo" class="user-chip badge bg-light text-dark border">
@@ -143,10 +144,12 @@
 
       <!-- شارة الفصل/العام -->
       <div id="termBadge"></div>
+      <!-- نص الزيارات يظهر هنا -->
       <div id="selectedVisitsContainer"></div>
+      <!-- نسبة الاكتمال -->
       <div id="completionRateContainer"></div>
 
-      <!-- شريط الإجراءات: إضافة السجل + حفظ الكل + تحديث -->
+      <!-- شريط الإجراءات -->
       <div class="card p-2 mb-2">
         <div class="bulk-bar">
           <span class="bulk-title">إجراءات سريعة</span>
@@ -425,7 +428,7 @@
       document.getElementById("completionRateContainer").innerHTML=`📌 نسبة الاكتمال لـ <b>${lastCollege}</b> = ${pct}% — <span class="muted">عدد اللجان: ${numCommittees}</span>`;
     }
 
-    /* ====== إظهار/إخفاء الأعمدة لحظيًا ====== */
+    /* ====== إظهار/إخفاء الأعمدة ====== */
     function applyColumnVisibilityInstant(){
       document.querySelectorAll('.col-toggle').forEach(cb=>{
         const field=cb.dataset.field; const show=cb.checked;
@@ -444,10 +447,13 @@
     async function loadSettings(){
       try{
         const res=await apiFetch('/api/settings'); const settings=await res.json();
+
+        // زيارات
         if(settings?.selectedVisits){
           document.querySelectorAll('.visit-toggle').forEach(cb=>{cb.checked=settings.selectedVisits.includes(cb.value)});
         }
-        // حالة الأعمدة المحفوظة
+
+        // حالة الأعمدة
         if(Array.isArray(settings?.visibleColumns) && settings.visibleColumns.length){
           document.querySelectorAll('.col-toggle').forEach(cb=>{cb.checked=settings.visibleColumns.includes(cb.dataset.field)});
         }
@@ -457,12 +463,19 @@
         const term=settings?.term||''; const ay=settings?.academicYear||'';
         let html=''; if(term||ay){html=`<span class="badge text-bg-info">📚 الفصل الحالي: <b>${term||'—'}</b> — العام: <b>${ay||'—'}</b></span>`;}
         document.getElementById('termBadge').innerHTML=html;
-      }catch{}
+
+        // ✅ إظهار نص الزيارات أعلى نسبة الاكتمال قبل تحميل الجدول
+        updateSelectedVisits();
+
+      }catch(e){ /* تجاهل */ }
     }
+
     function updateSelectedVisits(){
       const selected=Array.from(document.querySelectorAll('.visit-toggle:checked')).map(cb=>cb.value);
       document.getElementById('selectedVisitsContainer').innerHTML=selected.length?("الزيارات: "+selected.join(' | ')):'';
     }
+
+    // حفظ الإعدادات (الأعمدة/الزيارات)
     document.getElementById('saveSettingsBtn')?.addEventListener('click',async()=>{
       try{
         const visibleColumns=Array.from(document.querySelectorAll('.col-toggle:checked')).map(cb=>cb.getAttribute('data-field'));
@@ -472,6 +485,29 @@
         updateSelectedVisits();
         applyColumnVisibilityInstant();
       }catch(err){console.error(err);showError("❌ خطأ في حفظ الإعدادات")}
+    });
+
+    // ✅ زر حفظ الفصل/العام
+    document.getElementById('saveTermBtn')?.addEventListener('click', async ()=>{
+      try{
+        const term = document.getElementById('termSelect').value.trim();
+        const academicYear = document.getElementById('academicYearInput').value.trim();
+        const rx = /^(20\d{2})[\/-](20\d{2})$/;
+        if(academicYear && !rx.test(academicYear)){
+          showError('⚠️ صيغة العام الجامعي يجب أن تكون 2024-2025 أو 2024/2025');
+          return;
+        }
+        const payload = { term, academicYear };
+        const r = await axios.put(`${API_BASE}/api/settings`, payload, { withCredentials:true });
+        const s = r.data || {};
+        const t = s.term || term || '—';
+        const ay = s.academicYear || academicYear || '—';
+        document.getElementById('termBadge').innerHTML = `<span class="badge text-bg-info">📚 الفصل الحالي: <b>${t}</b> — العام: <b>${ay}</b></span>`;
+        showSuccess('✅ تم حفظ الفصل/العام');
+      }catch(e){
+        console.error(e);
+        showError('❌ خطأ في حفظ الفصل/العام');
+      }
     });
 
     /* ====== إنشاء صف ====== */
@@ -614,7 +650,7 @@
 
         arr.forEach((c,idx)=>{ const tr=buildRow(c,idx); document.getElementById('committeesTable').appendChild(tr); });
 
-        applyColumnVisibilityInstant();   // يحدّث العنوان ويعيد الحسابات
+        applyColumnVisibilityInstant();
         applyCommitteeSearch();
         updateCompletionRate();
         renumberRows();
@@ -630,7 +666,7 @@
     document.getElementById('saveAllBtn').addEventListener('click',async()=>{
       try{
         const rows=Array.from(document.querySelectorAll('#committeesTable tr.table-warning, #committeesTable tr.is-new'));
-      if(!rows.length){showError('لا توجد تعديلات');return;}
+        if(!rows.length){showError('لا توجد تعديلات');return;}
         for(const tr of rows){
           const payload=collectRowData(tr);
           const date=payload.audit_date?.trim();
@@ -762,6 +798,7 @@
         await ensureAuth();
         document.getElementById('homeBtn').href=go('/committees-home.html');
         await loadDatalists();
+        // ✅ أولًا: حمل الإعدادات وأظهر الزيارات، ثم حمل الجدول
         await loadSettings();
         await loadCommittees();
       }catch{}
