--- a/public/manage_committees.html
+++ b/public/manage_committees.html
@@ -51,7 +51,7 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <!-- Header (أنزلناه قليلًا وأضفنا mb-4 لتباعد أكبر مثل صفحة المدققين) -->
     <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-2">
       <h4 class="mb-0">إدارة تقييم اللجان</h4>
