--- a/public/manage_committees.html
+++ b/public/manage_committees.html
@@ -51,6 +51,7 @@
   </style>
 </head>
 <body>
+<!--  <div class="container-fluid">  -->
   <div class="container">
     <!-- Header (أنزلناه قليلًا وأضفنا mb-4 لتباعد أكبر مثل صفحة المدققين) -->
     <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-2">
