--- a/public/audit-logs.html
+++ b/public/audit-logs.html
@@ -377,6 +377,8 @@
       const decisionKey=['formation_decision','formationDecision','decision','decision_number','decisionNumber','formation_no','formationNo'].find(k=>k in d);
       if(decisionKey) h+=kv('قرار التشكيل', d[decisionKey], decisionKey, diffKeys, mode);
       ['work_plan','performance_indicators','meetings','consistency','coverage_books','report1','report2','report3','statistical_analysis'].forEach(k=>{ if(has(k)) h+=kv(toArabicLabel(k),d[k],k,diffKeys,mode); });
+      if(has('notes')) h+=kv('الملاحظات', d.notes, 'notes', diffKeys, mode);
+
     }else if(model==='College' || model==='Auditor' || model==='Committee'){
       const label = (model==='College') ? 'الكلية' : (model==='Auditor' ? 'المدقق' : 'اسم اللجنة');
       h+=kv(label, d.name, 'name', diffKeys, mode);
